--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body{
 }
 /*------------*/
 .egypt-photo-img , .egypt-photo-img-2{
-    width: 100%;
+    max-width: 100%;
     height: 50vb;
     background-image: url("../images/Asar.jpg");
     background-size: cover;
